# C-ProjctForFortend

./: .gitignore  CMakeLists.txt  helloworld.cpp  rercord.md
.cache/clangd/index/: college.cpp.9C36A3265B635DD9.idx  college.h.959E380BF8E647AD.idx  course.cpp.1162241DD9C4BFA2.idx  course.h.E8A2ECF91BE57BC9.idx  functions.cpp.F9286C5945792471.idx  functions.h.8E627643DE9805A6.idx  helloworld.cpp.83E7D5A74A29D588.idx  json.hpp.3814832CDDD4D1DD.idx  mankind.cpp.C3DE96FC3F5DBB71.idx  mankind.h.BDD768CF774DFBDF.idx
.sisyphus/plans/: course_sidebar_implementation.md
Example/: courses.json  students.json
SYSU_Latex_Template-main/: SYSUReport.cls  main.tex
frontend/: index.html  script.js  style.css
frontend/IMAGES/: -+.html
frontend/IMAGES/-+_files/: RotateCookiesPage.html  destination  gtm.js  js
src/lib/: college.cpp  college.h  course.cpp  course.h  functions.cpp  functions.h  mankind.cpp  mankind.h
